feat: complete ahp service
